css/style.css
/* temporary css, subjective to change */
body{
    font: 15px/1.5 Palatino, Times, Arial, Helvetica, sans-serif;
    padding : 0;
    margin : 0;
    background-color: #f8f8ff;
}

/* global */
.maincontainer{
    width: 78%;
    margin: auto;
    overflow: hidden;
    color: #2C3531;
    padding-top: 40px;
    padding-bottom: 40px;
}

.container{
    width: 50%;
    margin: auto;
    overflow: hidden;
    color: #2C3531;
    padding-top: 40px;
    padding-bottom: 40px;
}

.container-1{
    width: 90%;
    padding: 20px 20px 20px 20px;
}

.container-fluid {
    padding-right: 30px;
    padding-left: 30px;
}

header ul{
    margin: 0;
    padding: 0;
}

#button_1{
    height: 38px;
    background: #D1E8E2;
    border: 0;
    padding: 20px 20px 20px 20px;
    color: #ffffff
}

.contain{
    width: 80%;
    margin: auto;
    overflow: hidden;
}

.contain-fluid {
    padding-right: 30px;
    padding-left: 30px;
}

/* header */
header{
    background: #2C3531;
    color: #ffffff;
    padding-top: 15px;
    min-height: 60px;
}

header a{
    color: #ffffff;
    text-decoration: none;
}

header a:hover{
    color: #116466;
}

header li{
    float: left;
    display: inline;
    padding: 5px 15px 0px 15px;
}

header #brand{
    float:left;
}

header #brand h1{
    margin:0;
}

header nav{
    float: right;
    margin-top: 5px;
}

/*showcase*/
#showcase{
    min-height: 400px;
    text-align: center;
    color: #2C3531;
}

#showcase h1{
    margin-top: 60px;
    font-size: 54px;
    margin-bottom: 10px;
}

#showcase p{
    font-size: 20px;
}

/* search box*/
.search-box{
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, 10%);
    background: #2f3640;
    height: 40px;
    border-radius : 30px;
    padding: 10px
}

.search-btn{
    position: relative;
    color: #116466;
    float: right;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background: #2f3640;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.4s;
    color:white;
    cursor:pointer;
}
.search-txt{
    border:none;
    background: none;
    outline: none;
    float:left;
    padding: 0;
    color: white;
    font-size: 14px;
    transition: 0.4s;
    line-height: 40px;
    width: 0px;
    font-weight:bold
}
.search-box > .search-txt{
    width: 325px;
    padding: 0 6px
}
.search-box > .search-btn{
    background:whitesmoke;
    color:black;
}

.search-btn > i {
    font-size: 30px;
    padding-top: 70px;
}

/*table*/
.container-table {
    display: table;
    width: 100%;
}

#main-table{
    margin-left: auto;
    margin-right: auto;
    width: 85%;
    table-layout: fixed;
    column-rule-color: black; 
}

#main-table-header{
    margin-left: auto;
    margin-right: auto;
    width: 70%%;
    table-layout: fixed;
    column-rule-color: black; 
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 20px;
}

td{
    padding-left: 15px;
    padding-right: 15px
}

#top-row-table{
    vertical-align: text-bottom;
    font-size: 20px;
}

.table-body{
    text-align: center;
    font-size: 18px;
}

/*map*/
#map_chart{
    position: absolute;
    color: #2C3531;
}

/*boxes*/
#boxes{
    margin-top: 20px;
    color: #2C3531;
}

#boxes.box{
    float: left;
    text-align: center;
    width: 25%;
    padding: 10px;
    color: #2C3531;
}

.box{
    float: left;
    width: 320px;
    height: 200px;
    color: #2C3531;
    padding: 10px 10px 10px 10px;
}

.box h3{
    text-align: center;
    color: #2C3531;
}

.box p{
    text-align: center;
    color: #2C3531;
}

/*footer*/
footer{
    padding:20px;
    margin-top: 20px;
    color:#ffffff;
    background-color: #000000;
    text-align: center;
}

/*float-child add in format for the map and info boxes*/
.float-child {
    padding: 20px;
    border: 2px #2C3531;
    color: #2C3531;
}

#map-chart{
    width: 100%;
    float: middle;
    color: #2C3531;
}

#info-box{
    width: 20%;
    color: #2C3531;
}


element.style {
}
.alert-warning {
    color: #856404;
    background-color: #fff3cd;
    border-color: #ffeeba;
    width: 60%;
    text-align: center
}
.alert {
    position: relative;
    padding: .75rem 1.25rem;
    margin-bottom: 1rem;
    border: 1px solid transparent;
    border-radius: .25rem;
}


.popup {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

/* The actual popup (appears on top) */
.popup .popuptext {
  visibility: hidden;
  width: 160px;
  background-color: #FFE4C4;
  color: #000;
  text-align: center;
  border-radius: 6px;
  padding: 8px 0;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -80px;
}

/* Popup arrow */
.popup .popuptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #FFE4C4 transparent transparent transparent;
}

/* Toggle this class when clicking on the popup container (hide and show the popup) */
.popup .show {
  visibility: visible;
  -webkit-animation: fadeIn 1s;
  animation: fadeIn 1s
}

/* Add animation (fade in the popup) */
@-webkit-keyframes fadeIn {
  from {opacity: 0;}
  to {opacity: 1;}
}

@keyframes fadeIn {
  from {opacity: 0;}
  to {opacity:1 ;}
}

